<resources>
    <string name="app_name">Ofidy Shopping Browser</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_search">Search</string>
    <string name="cdesc_product_image">Product image</string>
    <string name="product_transition">Product transition</string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="title_activity_product">ProductActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_account">My Account</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="splash_transition">Splash</string>
    <string name="err_msg_email">Email address is not valid</string>
    <string name="err_msg_password">Password is too short</string>
    <string name="title_activity_cart">Shopping Cart</string>
    <string name="search_hint">I\'m looking for...</string>
    <string name="action_cart">Cart</string>
    <string name="dont_logout">Don\'t logout</string>
    <string name="logout">Logout</string>
    <string name="you_sure">Signing out will disable your ability to buy products from ofidy</string>
    <string name="post_limit_exceeded">%1$s total products in section</string>
    <string name="action_filter">Filter</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="action_clear">Clear</string>
    <string name="card_number">Card number</string>
    <string name="cvv">CVV</string>
    <string name="mm">MM</string>
    <string name="yyyy">YYYY</string>
    <string name="create_token">Create token</string>
    <string name="no_card_yet">No card yet</string>
    <string name="no_token">No token</string>
    <string name="token_null_message">Token was null</string>
    <string name="token_not_gotten">Unable to get token</string>
    <string name="sample_card">4123450131001381</string>
    <string name="sample_cvv">883</string>
    <string name="sample_month">01</string>
    <string name="sample_year">2020</string>
    <string name="no_transaction_yet">No transaction yet</string>
    <string name="amount_in_kobo">Amount in Kobo</string>
    <string name="action_new_tab">New Tab</string>
    <string name="action_share">Share</string>
    <string name="action_history">History</string>
    <string name="action_bookmarks">Bookmarks</string>
    <string name="action_add_bookmark">Add Bookmark</string>
    <string name="action_copy">Copy Link</string>
    <string name="action_forward">Forward</string>
    <string name="settings">Settings</string>
    <string name="location">Location Access</string>
    <string name="password">Save your passwords</string>
    <string name="agent">User Agent</string>
    <string name="flash">Enable Adobe Flash</string>
    <string name="home">Homepage</string>
    <string name="fullscreen">Full-screen Mode</string>
    <string name="java">Enable JavaScript</string>
    <string name="download">Download Location</string>
    <string name="settings_advanced">Advanced Settings</string>
    <string name="apache">Apache License 2.0</string>
    <string name="version">Application Version</string>
    <string name="cache">Clear cache on exit</string>
    <string name="reflow">Enable text reflow</string>
    <string name="block">Block Images</string>
    <string name="window">Allow sites to open new windows</string>
    <string name="cookies">Enable Cookies</string>
    <string name="importbookmarks">Import bookmarks from browser</string>
    <string name="size">Text size</string>
    <string name="recommended">Recommended</string>
    <string name="search">Search Engine</string>
    <string name="wideViewPort">Use wide viewport</string>
    <string name="overViewMode">Load pages in overview mode</string>
    <string name="restore">Restore lost tabs on start</string>
    <string name="supported_browsers_title">Supported Browsers</string>
    <string name="stock_browser">Stock Browser</string>
    <string name="stock_browser_unavailable">No stock browser detected</string>
    <string name="stock_browser_available">Supported stock browser detected</string>
    <string name="fullScreenOption">Hide status bar while browsing</string>
    <string name="clear_cookies">Clear Browser Cookies</string>
    <string name="clear_history">Clear Browser History</string>
    <string name="dialog_image">What would you like to do with this image?</string>
    <string name="action_download">Download</string>
    <string name="action_open">Open</string>
    <string name="dialog_link">What would you like to do with this link?</string>
    <string name="dialog_title_share">Share this page</string>
    <string name="dialog_history_long_press">What would you like to do with this history item?</string>
    <string name="dialog_bookmark">What would you like to do with this bookmark?</string>
    <string name="action_delete">Delete</string>
    <string name="action_blank">Blank Page</string>
    <string name="agent_default">Default</string>
    <string name="agent_desktop">Desktop</string>
    <string name="agent_mobile">Mobile</string>
    <string name="agent_custom">Custom</string>
    <string name="title_search_engine">Search Engine</string>
    <string name="action_ok">OK</string>
    <string name="dialog_download">Do you want to download this file?</string>
    <string name="action_cancel">Cancel</string>
    <string name="title_warning">Warning</string>
    <string name="dialog_adobe_not_installed">Adobe Flash Player was not detected.\nPlease install Flash Player.</string>
    <string name="title_user_agent">User Agent</string>
    <string name="title_download_location">Download Location</string>
    <string name="title_custom_homepage">Custom Homepage</string>
    <string name="action_webpage">Webpage</string>
    <string name="title_clear_history">Clear History</string>
    <string name="title_clear_cookies">Clear Cookies</string>
    <string name="dialog_history">Would you like to clear all browser history?</string>
    <string name="dialog_cookies">Would you like to clear all browser cookies?</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="title_text_size">Text Size</string>
    <string name="size_largest">Largest</string>
    <string name="size_large">Large</string>
    <string name="size_normal">Normal</string>
    <string name="size_small">Small</string>
    <string name="size_smallest">Smallest</string>
    <string name="title_error">Error</string>
    <string name="dialog_import_error">No browser was detected to import bookmarks from.</string>
    <string name="hint_title">Title</string>
    <string name="hint_url">URL</string>
    <string name="title_edit_bookmark">Edit Bookmark</string>
    <string name="action_edit">Edit</string>
    <string name="action_incognito">New Incognito Tab</string>
    <string name="action_homepage">Default</string>
    <string name="action_back">Back</string>
    <string name="action_find">Find in Page</string>
    <string name="download_pending">Starting download\u2026</string>
    <string name="cannot_download">Can only download \"http\" or \"https\" URLs.</string>
    <string name="problem_download">Invalid URL encountered, cannot download</string>
    <string name="problem_location_download">Cannot download to the specified location</string>
    <string name="download_no_sdcard_dlg_title">No SD card</string>
    <string name="download_no_sdcard_dlg_msg">USB storage is required to download the file.</string>
    <string name="download_sdcard_busy_dlg_title">USB storage unavailable</string>
    <string name="download_sdcard_busy_dlg_msg">The storage is busy. To allow downloads, touch Turn Off USB Storage in the notification.</string>
    <string name="incognito_cookies">Enable Cookies in Incognito Mode</string>
    <string name="title_flash">Adobe Flash</string>
    <string name="action_manual">Manual</string>
    <string name="action_auto">Auto</string>
    <string name="action_follow_me">Contact Me</string>
    <string name="url_twitter">twitter.com/RestainoAnthony</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="message_cache_cleared">Cache Cleared</string>
    <string name="message_import">Bookmarks Were Imported</string>
    <string name="message_clear_history">History Cleared</string>
    <string name="message_cookies_cleared">Cookies Cleared</string>
    <string name="max_tabs">Max Tabs Reached</string>
    <string name="message_text_copied">Text copied to clipboard</string>
    <string name="message_link_copied">Link copied to clipboard</string>
    <string name="custom_url">Custom URL</string>
    <string name="message_blocked_local">Local file has been blocked from loading</string>
    <string name="licenses">Open Source Licenses</string>
    <string name="suggestion">Search for</string>
    <string name="block_ads">Block Ads</string>
    <string name="message_insecure_connection">Connection to this site is not secure:\n%1$s\nProceed anyway?</string>
    <string name="message_certificate_date_invalid">date of certificate is invalid</string>
    <string name="message_certificate_expired">certificate is expired</string>
    <string name="message_certificate_domain_mismatch">domain in certificate does not match the site domain</string>
    <string name="message_certificate_invalid">certificate is invalid</string>
    <string name="message_certificate_not_yet_valid">certificate is not yet valid</string>
    <string name="message_certificate_untrusted">certificate is not trusted</string>
    <string name="title_form_resubmission">Form Resubmission</string>
    <string name="message_form_resubmission">Would you like to resend the data?</string>
    <string name="message_location">\nWould like to use your location</string>
    <string name="action_allow">Allow</string>
    <string name="action_dont_allow">Don\'t Allow</string>
    <string name="title_sign_in">Sign In</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="search_suggestions">Search Suggestions</string>
    <string name="powered_by_google">Powered by Google</string>
    <string name="powered_by_duck">Powered by DuckDuckGo</string>
    <string name="search_suggestions_off">No search suggestions</string>
    <string name="http_proxy">HTTP Proxy</string>
    <string-array name="proxy_choices_array">
        <item>None</item>
        <item>Orbot</item>
        <item>I2P</item>
        <item>Manual</item>
    </string-array>
    <string name="manual_proxy">Manual proxy</string>
    <string name="host">Host:</string>
    <string name="port">Port:</string>
    <string name="use_tor_prompt">It looks like you have Orbot installed. Do you want to use Tor?</string>
    <string name="use_i2p_prompt">It looks like you have I2P installed. Do you want to use I2P?</string>
    <string name="tabs">Tabs</string>
</resources>