<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:background="@drawable/sbackground"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/action_new_tab"
            android:src="@drawable/logo_ofidy"
            android:padding="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:backgroundTint="#ccFFFFFF"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="16dp">

                <TextView
                    android:visibility="gone"
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/nav_header_vertical_spacing"
                    android:text="Android Studio"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="android.studio@android.com"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
                />

            </LinearLayout>

            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="4dp"-->
                <!--android:orientation="horizontal">-->

                <!--<TextView-->
                    <!--android:layout_width="0dp"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_weight="1"-->
                    <!--android:textAppearance="@style/TextAppearance.Medium.Dim"-->
                    <!--android:layout_marginLeft="4dp"-->
                    <!--android:layout_marginStart="4dp"-->
                    <!--android:text="Preferred Currency:"/>-->

                <!--<Spinner-->
                    <!--android:theme="@style/customSpinnerTheme"-->
                    <!--android:id="@+id/currency"-->
                    <!--android:layout_width="0dp"-->
                    <!--android:layout_weight="1"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:entries="@array/currency"/>-->

            <!--</LinearLayout>-->

        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp">

        <Button
            android:id="@+id/action_view_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cart"
            android:textColor="@color/white"
            android:layout_marginRight="4dp"
            android:background="@color/colorPrimary"/>

        <Button
            android:id="@+id/action_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Logout"
            android:textColor="@color/white"
            android:layout_marginLeft="4dp"
            android:background="@color/colorPrimary"/>

    </LinearLayout>

    <Button
        android:id="@+id/action_add_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:text="Add to Cart"
        android:layout_marginRight="4dp"
        android:background="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/tab_header_button"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="match_parent"
            android:background="?attr/actionBarItemBackground"
            android:gravity="center">

            <ImageView
                android:id="@+id/plusIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/action_new_tab"
                app:srcCompat="@drawable/ic_action_tabs"/>
        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:minHeight="?android:attr/listPreferredItemHeight"
            android:text="@string/tabs"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/tabs_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:overScrollMode="ifContentScrolls"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="4">

        <FrameLayout
            android:id="@+id/action_back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/actionBarItemBackground"
            android:clickable="true">

            <ImageView
                android:id="@+id/icon_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/action_back"
                app:srcCompat="@drawable/ic_action_back"/>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/action_home"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/actionBarItemBackground"
            android:clickable="true">

            <ImageView
                android:id="@+id/icon_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/action_homepage"
                app:srcCompat="@drawable/ic_action_home"/>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/action_forward"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/actionBarItemBackground"
            android:clickable="true">

            <ImageView
                android:id="@+id/icon_forward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/action_forward"
                app:srcCompat="@drawable/ic_action_forward"/>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/new_tab_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/actionBarItemBackground"
            android:clickable="true">

            <ImageView
                android:id="@+id/icon_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/action_new_tab"
                app:srcCompat="@drawable/ic_action_plus"/>
        </FrameLayout>
    </LinearLayout>

</LinearLayout>